# Ros2Humble_RCA

./: README.md
moveit/: .setup_assistant  package.xml
moveit/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  rca.ros2_control.xacro  rca.srdf  rca.urdf.xacro  ros2_controllers.yaml
moveit/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
rca_bringup/: CMakeLists.txt  package.xml
rca_bringup/launch/: alexa_rca.launch.py  rca.launch.py  sim_rca.launch.py
rca_controller/: CMakeLists.txt  package.xml  rca_controller.xml
rca_controller/config/: rca_controllers.yaml
rca_controller/include/rca_controller/: rca_interface.hpp
rca_controller/launch/: controller.launch.py
rca_controller/rca_controller/: slider_control.py
rca_controller/src/: rca_interface copy.cpp  rca_interface.cpp  slider_control.cpp
rca_description/: CMakeLists.txt  package.xml
rca_description/launch/: display.launch.xml  gazebo.launch.py  rviz.launch.py
rca_description/meshes/: RCA_BASE_TOWER4URDF.stl
rca_description/rviz/: rca.rviz
rca_description/urdf/: gazebo.xacro  joints.xacro  material.xacro  rca.urdf.xacro  rca_core.xacro  robot.xacro  ros2_control.xacro
rca_firmware/: CMakeLists.txt  package.xml
rca_firmware/firmware/RCA_Control/: RCA_Control.ino
rca_firmware/firmware/readPitos/: readPitos.ino
rca_firmware/firmware/simple_serial_receiver/: simple_serial_receiver.ino
rca_firmware/firmware/simple_serial_transmitter/: simple_serial_transmitter.ino
rca_firmware/firmware/simple_servo_control/: simple_servo_control.ino
rca_firmware/firmware_esp/servo_esp_array/: servo_esp_array.ino
rca_firmware/src/: simple_serial_receiver.cpp  simple_serial_transmitter.cpp
rca_moveit/: CMakeLists.txt  package.xml
rca_moveit/config/: initial_positions.yaml  joint_limits.yaml  kinematic.yaml  kinematics.yaml  moveit_controllers.yaml  pilz_cartesian_limits.yaml  pliz_cartesian_limits.yaml  rca.srdf
rca_moveit/launch/: moveit.launch.py
rca_msgs/: CMakeLists.txt  package.xml
rca_msgs/action/: RcaTask.action
rca_remote/: CMakeLists.txt  package.xml
rca_remote/launch/: remote_interface.launch.py
rca_remote/rca_remote/: own_interface.py  video_save.py
rca_remote/src/: task_server.cpp
rca_simple/: CMakeLists.txt  package.xml
rca_simple/src/: lifecycle_node.cpp  moveit_interface.cpp
